--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "connect-sqlite3": "^0.9.0",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "nodemailer": "^6.9.4",
-    "node-cron": "^3.0.2",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.10.1",
     "sqlite3": "^5.1.6",
     "uuid": "^9.0.0"
   },
